<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/taskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/taskname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/description_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/taskdesc" />
        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_background" />


        <Spinner
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_background" />


        <LinearLayout
            android:id="@+id/datelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:id="@+id/chooseDateView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:drawableEnd="@drawable/calendar"
                android:drawableRight="@drawable/calendar"
                android:gravity="center_vertical"
                android:text="@string/choose_date"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/dateView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:text=""
                android:textColor="@color/textColorBlack"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteTaskBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/textColorRed"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/delete_task"
                android:textColor="@color/textColorWhite" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginLeft="10dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/submit"
                android:textColor="@color/textColorWhite" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>